merge from branch develope with tips like not using stream.foreach link-
link to knowledge-
https://www.baeldung.com/java-collection-stream-foreach